<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        android:backgroundTint="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnUpdateEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        android:backgroundTint="@color/colorAccent"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnUpdatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorTextPrimary"/>

</LinearLayout>